Infrastructure, Migration, Reponsitory

--- a/TeduShop.Data/App.config
+++ b/TeduShop.Data/App.config
@@ -11,4 +11,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+	<connectionStrings>
+		<add name="TeduShopDbContext"
+		  connectionString="data source=.;initial catalog=TeduShop;user id=sa;password=123456aA@;MultipleActiveResultSets=True;App=EntityFramework"
+		  providerName="System.Data.SqlClient"/>
+	</connectionStrings>
 </configuration>
