--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -54,33 +54,34 @@
     <Compile Include="Infrastructure\DbFactory.cs" />
     <Compile Include="Infrastructure\Disposable.cs" />
     <Compile Include="Infrastructure\IDbFactory.cs" />
-    <Compile Include="Infrastructure\IReponsitory.cs" />
+    <Compile Include="Infrastructure\IRepository.cs" />
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Infrastructure\RepositoryBase.cs" />
     <Compile Include="Infrastructure\UnitOfWork.cs" />
-    <Compile Include="Migrations\202108271756448_InitialDB.cs" />
-    <Compile Include="Migrations\202108271756448_InitialDB.designer.cs">
-      <DependentUpon>202108271756448_InitialDB.cs</DependentUpon>
+    <Compile Include="Migrations\202109030911475_InitialDB.cs" />
+    <Compile Include="Migrations\202109030911475_InitialDB.designer.cs">
+      <DependentUpon>202109030911475_InitialDB.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reponsitory\FooterRepository.cs" />
-    <Compile Include="Reponsitory\MenuRepository.cs" />
-    <Compile Include="Reponsitory\MenuGroupRepository.cs" />
-    <Compile Include="Reponsitory\OrderRepository.cs" />
-    <Compile Include="Reponsitory\OrderDetailRepository.cs" />
-    <Compile Include="Reponsitory\PageRepository.cs" />
-    <Compile Include="Reponsitory\PostRepository.cs" />
-    <Compile Include="Reponsitory\PostCategoryRepository.cs" />
-    <Compile Include="Reponsitory\PostTagRepository.cs" />
-    <Compile Include="Reponsitory\ProductCategoryRepository.cs" />
-    <Compile Include="Reponsitory\ProductRepository.cs" />
-    <Compile Include="Reponsitory\ProductTagRepository.cs" />
-    <Compile Include="Reponsitory\SlideRepository.cs" />
-    <Compile Include="Reponsitory\SupportOnlineRepository.cs" />
-    <Compile Include="Reponsitory\SystemConfigRepository.cs" />
-    <Compile Include="Reponsitory\TagRepository.cs" />
-    <Compile Include="Reponsitory\VisistorStatisticRepository.cs" />
+    <Compile Include="Repository\ErrorRepository.cs" />
+    <Compile Include="Repository\FooterRepository.cs" />
+    <Compile Include="Repository\MenuRepository.cs" />
+    <Compile Include="Repository\MenuGroupRepository.cs" />
+    <Compile Include="Repository\OrderRepository.cs" />
+    <Compile Include="Repository\OrderDetailRepository.cs" />
+    <Compile Include="Repository\PageRepository.cs" />
+    <Compile Include="Repository\PostRepository.cs" />
+    <Compile Include="Repository\PostCategoryRepository.cs" />
+    <Compile Include="Repository\PostTagRepository.cs" />
+    <Compile Include="Repository\ProductCategoryRepository.cs" />
+    <Compile Include="Repository\ProductRepository.cs" />
+    <Compile Include="Repository\ProductTagRepository.cs" />
+    <Compile Include="Repository\SlideRepository.cs" />
+    <Compile Include="Repository\SupportOnlineRepository.cs" />
+    <Compile Include="Repository\SystemConfigRepository.cs" />
+    <Compile Include="Repository\TagRepository.cs" />
+    <Compile Include="Repository\VisistorStatisticRepository.cs" />
     <Compile Include="TeduShopDbContext.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -88,15 +89,15 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202108271756448_InitialDB.resx">
-      <DependentUpon>202108271756448_InitialDB.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\TeduShop.Model\TeduShop.Model.csproj">
       <Project>{efa80de4-dc08-41fa-bf1c-4a803ecfbf18}</Project>
       <Name>TeduShop.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202109030911475_InitialDB.resx">
+      <DependentUpon>202109030911475_InitialDB.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
