--- a/TeduShop.Service/TeduShop.Service.csproj
+++ b/TeduShop.Service/TeduShop.Service.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ErrorService.cs" />
     <Compile Include="FooterService.cs" />
     <Compile Include="MenuService.cs" />
     <Compile Include="PostCategoryService.cs" />
